feat(canon): add project ledgers and history undo